--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PocBoxes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+<style>
+  body,
+  html {
+    margin: 0;
+    padding: 0;
+  }
+</style>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
